<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bar_background"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp">

        <View
            android:layout_width="100dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="#80FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/advanced_search"
            android:textSize="24sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3"
            tools:ignore="UselessParent">

            <com.yenaly.han1meviewer.ui.view.HOptionChip
                android:id="@+id/type"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/type"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textAlignment="center" />


            <com.yenaly.han1meviewer.ui.view.HOptionChip
                android:id="@+id/sort_option"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/sort_option"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textAlignment="center" />

            <com.yenaly.han1meviewer.ui.view.HOptionChip
                android:id="@+id/tag"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tag"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textAlignment="center" />


            <com.yenaly.han1meviewer.ui.view.HOptionChip
                android:id="@+id/release_date"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/release_date"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textAlignment="center" />

            <com.yenaly.han1meviewer.ui.view.HOptionChip
                android:id="@+id/duration"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/duration"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textAlignment="center" />

            <com.yenaly.han1meviewer.ui.view.HOptionChip
                android:id="@+id/brand"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                android:text="@string/brand"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textAlignment="center" />

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
             android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="@string/search_options_tips" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/popup_search_btn"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:iconGravity="textStart"
                app:icon="@drawable/ic_baseline_search_24"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"/>
<!--                android:text="@string/popup_search_btn" />-->
        </LinearLayout>
    </LinearLayout>
</layout>
